feat: added readme
